feat(dotnet-desktop.yml): 添加 nightly.link 直链下载支持
在 GitHub Actions 工作流中新增了对 nightly.link 直链下载的支持，
方便用户快速获取构建产物。

--- a/.github/workflows/dotnet-desktop.yml
+++ b/.github/workflows/dotnet-desktop.yml
@@ -309,6 +309,7 @@ jobs:
             
             # 如果有构建产物，显示下载链接
             if [ "$BUILD_SUCCESS" = "true" ]; then
+              NIGHTLY_LINK="https://nightly.link/${{ github.repository }}/actions/runs/${{ github.run_id }}/app-package.zip"
               echo ""
               echo "## 构建产物"
               if [ -n "$ARTIFACT_URL" ]; then
@@ -316,7 +317,8 @@ jobs:
               else
                 echo "- 📦 [下载构建产物](${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }})"
               fi
-              
+              echo "- 🌙 [直链下载 (nightly.link)]($NIGHTLY_LINK)"
+                              
               if [ "$READY_FOR_REVIEW" = "true" ]; then
                 echo ""
                 echo "## 🎉 审查建议"
@@ -391,3 +393,7 @@ jobs:
           echo "**运行编号:** #${{ github.run_number }}" >> $GITHUB_STEP_SUMMARY
           echo "" >> $GITHUB_STEP_SUMMARY
           echo "[📦 下载构建产物](${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }})" >> $GITHUB_STEP_SUMMARY
+          echo "" >> $GITHUB_STEP_SUMMARY
+          echo "**直链下载 (nightly.link):**" >> $GITHUB_STEP_SUMMARY
+          echo "" >> $GITHUB_STEP_SUMMARY
+          echo "[🌙 nightly.link 下载链接](https://nightly.link/${{ github.repository }}/actions/runs/${{ github.run_id }}/app-package.zip)" >> $GITHUB_STEP_SUMMARY
