build(iss): 更新安装脚本路径配置
将默认安装目录更新为使用 {autopf} 常量，并将许可证文件路径改为相对路径。
同时修正了源文件和输出目录的绝对路径引用，确保构建配置更具可移植性。
移除了重复的 [Run] 节中的空行。

--- a/.github/workflows/prerelease.yml
+++ b/.github/workflows/prerelease.yml
@@ -289,7 +289,7 @@ jobs:
           # 更新默认安装目录
           $issContent = $issContent -replace 'DefaultDirName=.*', 'DefaultDirName={autopf}\{#MyAppName}'
           
-          # 更新许可证文件路径
+          # 更新许可证文件路径为相对路径
           $issContent = $issContent -replace 'LicenseFile=.*', 'LicenseFile=LICENSE'
           
           # 保存修改后的 ISS 文件
