feat(build): 添加非官方 Inno Setup 语言文件支持
在构建流程中增加对 EnglishBritish 和 ChineseSimplified 非官方语言文件的下载与安装，
并更新 Inno Setup 脚本以正确引用这些语言文件，从而提升国际化支持。

--- a/.github/workflows/prerelease.yml
+++ b/.github/workflows/prerelease.yml
@@ -210,6 +210,26 @@ jobs:
       - name: Setup MSBuild
         uses: microsoft/setup-msbuild@v2
 
+      - name: Install Inno Setup Unofficial Language Files
+        run: |
+          # 创建临时目录用于下载文件
+          New-Item -ItemType Directory -Path "temp_lang" -Force
+          
+          # 下载英语英国版语言文件
+          Invoke-WebRequest -Uri "https://github.com/jrsoftware/issrc/raw/refs/heads/main/Files/Languages/Unofficial/EnglishBritish.isl" -OutFile "temp_lang\EnglishBritish.isl"
+          
+          # 下载简体中文版语言文件
+          Invoke-WebRequest -Uri "https://github.com/jrsoftware/issrc/raw/refs/heads/main/Files/Languages/Unofficial/ChineseSimplified.isl" -OutFile "temp_lang\ChineseSimplified.isl"
+          
+          # 将文件移动到 Inno Setup 的语言目录
+          Move-Item -Path "temp_lang\EnglishBritish.isl" -Destination "C:\Program Files (x86)\Inno Setup 6\Languages\EnglishBritish.isl" -Force
+          Move-Item -Path "temp_lang\ChineseSimplified.isl" -Destination "C:\Program Files (x86)\Inno Setup 6\Languages\ChineseSimplified.isl" -Force
+          
+          # 清理临时目录
+          Remove-Item -Path "temp_lang" -Recurse -Force
+          
+          Write-Host "✅ Inno Setup unofficial language files installed successfully" -ForegroundColor Green
+
       - name: Cache NuGet packages and obj files
         id: cache-nuget
         uses: actions/cache@v4
